manifests/kubernetes-dashboard/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kubernetes-dashboard-proxy
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kubernetes-dashboard-proxy
    spec:
      containers:
      - image: quay.io/gambol99/keycloak-proxy:v2.1.1
        name: kubernetes-dashboard-proxy
        args:
          - --listen=0.0.0.0:3000
          - --discovery-url=https://keycloak.192.168.26.11.nip.io/auth/realms/kube7days
          - --skip-openid-provider-tls-verify
          - --client-id=kubernetes
          - --client-secret=7957ef10-8772-480c-95fb-7ea3d5a94884
          - --redirection-url=https://dashboard.192.168.26.11.nip.io
          - --enable-refresh-tokens=true
          - --encryption-key=MsVRjD36bfAxfBvHUKUjXOTPXaItDThn    # 32 bytes string
          - --upstream-url=https://kubernetes-dashboard.kube-system.svc.cluster.local
          - --resources=uri=/*
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /oauth/health
            port: 3000
          initialDelaySeconds: 3
          timeoutSeconds: 2
        readinessProbe:
          httpGet:
            path: /oauth/health
            port: 3000
          initialDelaySeconds: 3
          timeoutSeconds: 2
