manifests/kubernetes-dashboard/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard-proxy
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: dashboard.192.168.26.11.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard-proxy
          servicePort: 3000
  tls:
  - hosts:
    - dashboard.192.168.26.11.nip.io
    secretName: kubernetes-dashboard-tls
